feat: 랭킹 전용 RedisTemplate 설정